--- a/azure-functions/resources/mail_templates/template_EN.pug
+++ b/azure-functions/resources/mail_templates/template_EN.pug
@@ -21,7 +21,7 @@ if checkedOnePagers.length > 0
 
     ul
         each onePager in checkedOnePagers
-            li <a href="#{onePager.url}">#{onePager.name}</a>: als #{onePager.lang} One Pager
+            li <a href="#{onePager.url}">#{onePager.name}</a>: als neuster #{onePager.lang} One Pager
 
 
     p
