--- a/azure-functions/resources/mail_templates/template_DE.pug
+++ b/azure-functions/resources/mail_templates/template_DE.pug
@@ -117,3 +117,4 @@ p
     b Dein Staffing Team
 
 br
+<a href="#{linkToAllowUseOfOnePagers}">Klicke hier, um die Verwendung deines One Pagers zu erlauben.</a>
