github pages turned off and correction of SPValidationRegithub pages

--- a/azure-functions/resources/mail_templates/template_DE.pug
+++ b/azure-functions/resources/mail_templates/template_DE.pug
@@ -54,67 +54,124 @@ mixin errors(error)
             // do nothing
 
 
-p.
-    Hallo #{firstname},
+//- style(rel="stylesheet", type="text/css").
+//-     body {
+//-         color: #FFF;
+//-         background: #373737;
+//-     }
+body
+    //- <table style="background:#3399ff;"><tr><td>
+    p.
+        Hallo #{firstname},
 
-p.
-    vielen Dank, dass du deine One Pager immer so gewissenhaft pflegst.
-    Wie du sicherlich weißt, ist dein One Pager der zentrale Ort, an dem alle relevanten Informationen zu deinem Profil gebündelt sind - von deinem Foto über deine Skills bis hin zu deinen Projekterfahrungen.
-    Er dient als Grundlage für Kundenpräsentationen, Projektbesetzungen und Ausschreibungen.
+    p.
+        vielen Dank, dass du deine One Pager immer so gewissenhaft pflegst.
+        Wie du sicherlich weißt, ist dein One Pager der zentrale Ort, an dem alle relevanten Informationen zu deinem Profil gebündelt sind - von deinem Foto über deine Skills bis hin zu deinen Projekterfahrungen.
+        Er dient als Grundlage für Kundenpräsentationen, Projektbesetzungen und Ausschreibungen.
 
-p.
-    Nur aktuelle und einheitliche One Pager können im Staffing-Prozess und für Kundenpräsentationen verwendet werden.
-    Veraltete oder unvollständige Profile führen dazu, dass du bei Projektanfragen unter Umständen nicht berücksichtigt wirst.
-    Auch wenn du aktuell kein Projekt suchst, kann dein One Pager für Kundenpräsentationen oder Ausschreibungen verwendet werden.
-    Nur mit einem aktuellen und vollständigen Profil wirst du optimal vertreten.
+    p.
+        Nur aktuelle und einheitliche One Pager können im Staffing-Prozess und für Kundenpräsentationen verwendet werden.
+        Veraltete oder unvollständige Profile führen dazu, dass du bei Projektanfragen unter Umständen nicht berücksichtigt wirst.
+        Auch wenn du aktuell kein Projekt suchst, kann dein One Pager für Kundenpräsentationen oder Ausschreibungen verwendet werden.
+        Nur mit einem aktuellen und vollständigen Profil wirst du optimal vertreten.
 
-p.
-    Im Rahmen der aktuellen Validierung deiner One Pager haben wir Folgendes festgestellt:
+    p.
+        Im Rahmen der aktuellen Validierung deiner One Pager haben wir Folgendes festgestellt:
 
-if checkedOnePagers.length > 0
+    if checkedOnePagers.length > 0
+        p
+            b Welche One Pager weisen Fehler auf?
+
+        ul
+            each onePager in checkedOnePagers
+                li <a href="#{onePager.url}">#{onePager.name}</a>: als neuster #{onePager.lang} One Pager
+
+
+        p
+            i.
+                Hinweis: Sollten die ausgewählten One Pager nicht die aktuellsten sein, kann das verschiedene Gründe haben.
+                Detaillierte Infos dazu findest du in unserem <a href="#{faqURL}">FAQ</a>.
+
+
     p
-        b Welche One Pager weisen Fehler auf?
-
+        b Fehlerbeschreibungen:
     ul
-        each onePager in checkedOnePagers
-            li <a href="#{onePager.url}">#{onePager.name}</a>: als neuster #{onePager.lang} One Pager
+        each error in generalErrors
+            +errors(error)
 
+        each onePager in onePagerErrors
+            li(style="margin-top: 5px;") #{onePager.name}:
+                ul(style="list-style-type:square;")
+                    each error in onePager.errors
+                        +errors(error)
+
+
+    if folderURL !== ''
+        p Das One Pager Guidebook findest du <a href="#{guideBookURL}">hier</a> und zu deinem One Pager Ordner gelangst du über diesen <a href="#{folderURL}">Link</a>.
+    else
+        p Das One Pager Guidebook findest du <a href="#{guideBookURL}">hier</a>.
+
+
+    p.
+        Bitte nimm die Überarbeitung <b>bis zum #{deadline}</b> vor.
+    p.
+        Bei Fragen oder Unsicherheiten schaue dir unsere <a href="#{faqURL}">FAQs</a> an.
+
+    p.
+        Danke für deine Unterstützung und Mithilfe!
 
     p
-        i.
-            Hinweis: Sollten die ausgewählten One Pager nicht die aktuellsten sein, kann das verschiedene Gründe haben.
-            Detaillierte Infos dazu findest du in unserem <a href="#{faqURL}">FAQ</a>.
+        b Dein Staffing Team
+
+    br
+    a(href=linkToAllowUseOfOnePagers) Klicke hier, um die Verwendung deines One Pagers zu erlauben.
+
+    br
+
+    a(href=linkToAllowUseOfOnePagers, style="color: gray; text-decoration: none;")
+        button(style="background: #0078d4; border: 1px solid gray; font-size: 15px; padding: 10px 60px; border-radius: 5px; cursor: pointer; width: 200px; height: 50px").
+            Erlaube die Verwendung deines One Pagers
+
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+            <td style="border-radius: 5px; background: #373737; text-align: center;">
+                <a href="#{linkToAllowUseOfOnePagers}" style="background: #373737; padding: 15px; border: 1px solid #7091C8; font-family: 'AvantGarde-demibold', 'Century Gothic', 'Arial Bold', Arial, font-size: 14px; line-height: 1.1; text-align: center; text-decoration: none; display: block; font-weight: bold;">
+                    <span style="color: #7091C8;">Erlaube die Verwendung deines One Pagers</span>
+                </a>
+            </td>
+        </tr>
+    </table>
+    br
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+            <td style="border-radius: 5px; background: #7091C8; text-align: center;">
+                <a href="#{linkToAllowUseOfOnePagers}" style="background: #7091C8; padding: 15px; border: 3px solid #7091C8; font-family: 'AvantGarde-demibold', 'Century Gothic', 'Arial Bold', Arial, font-size: 14px; line-height: 1.1; text-align: center; text-decoration: none; display: block; font-weight: bold;">
+                    <span style="color: #FFFFFF;">Erlaube die Verwendung deines One Pagers</span>
+                </a>
+            </td>
+        </tr>
+    </table>
+    br
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+            <td style="border-radius: 5px; background: #FFFFFF; text-align: center;">
+                <a href="#{linkToAllowUseOfOnePagers}" style="background: #FFFFFF; padding: 15px; border: 3px solid #7091C8; font-family: 'AvantGarde-demibold', 'Century Gothic', 'Arial Bold', Arial, font-size: 14px; line-height: 1.1; text-align: center; text-decoration: none; display: block; font-weight: bold;">
+                    <span style="color: #7091C8;">Erlaube die Verwendung deines One Pagers</span>
+                </a>
+            </td>
+        </tr>
+    </table>
+
+    br
+    <table role="presentation" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+            <td style="border-radius: 5px; background: #FFFFFF; text-align: center;">
+                <a href="#{linkToAllowUseOfOnePagers}" style="background: #FFFFFF; padding: 15px; border: 1px solid #7091C8; font-family: 'AvantGarde-demibold', 'Century Gothic', 'Arial Bold', Arial, font-size: 14px; line-height: 1.1; text-align: center; text-decoration: none; display: block; font-weight: bold;">
+                    <span style="color: #7091C8;">Erlaube die Verwendung deines One Pagers</span>
+                </a>
+            </td>
+        </tr>
+    </table>
 
 
-p
-    b Fehlerbeschreibungen:
-ul
-    each error in generalErrors
-        +errors(error)
-
-    each onePager in onePagerErrors
-        li(style="margin-top: 5px;") #{onePager.name}:
-            ul(style="list-style-type:square;")
-                each error in onePager.errors
-                    +errors(error)
-
-
-if folderURL !== ''
-    p Das One Pager Guidebook findest du <a href="#{guideBookURL}">hier</a> und zu deinem One Pager Ordner gelangst du über diesen <a href="#{folderURL}">Link</a>.
-else
-    p Das One Pager Guidebook findest du <a href="#{guideBookURL}">hier</a>.
-
-
-p.
-    Bitte nimm die Überarbeitung <b>bis zum #{deadline}</b> vor.
-p.
-    Bei Fragen oder Unsicherheiten schaue dir unsere <a href="#{faqURL}">FAQs</a> an.
-
-p.
-    Danke für deine Unterstützung und Mithilfe!
-
-p
-    b Dein Staffing Team
-
-br
-a(href=linkToAllowUseOfOnePagers, title=linkToAllowUseOfOnePagers) Klicke hier, um die Verwendung deines One Pagers zu erlauben.
+    //- </td></tr></table>
