a few changes to log outputs and back to OLDER_THAN_SIX_MONTHS

--- a/azure-functions/resources/mail_templates/template_DE.pug
+++ b/azure-functions/resources/mail_templates/template_DE.pug
@@ -45,9 +45,9 @@ mixin errors(error)
         //-     li(style="margin-top: 5px;").
         //-         Kein Bild vorhanden: Dein One Pager enthält aktuell kein Foto.
         //-         Bitte füge ein aktuelles Bild von dir hinzu, damit dein Profil vollständig ist.
-        when "OLDER_THAN_ONE_YEAR"
+        when "OLDER_THAN_SIX_MONTHS"
             li(style="margin-top: 5px;").
-                One Pager ist älter als 12 Monate: Dein One Pager ist inzwischen älter als 12 Monate, was bedeutet, dass er höchstwahrscheinlich nicht mehr den aktuellen Standards entspricht.
+                One Pager ist älter als 6 Monate: Dein One Pager ist inzwischen älter als 6 Monate, was bedeutet, dass er höchstwahrscheinlich nicht mehr den aktuellen Standards entspricht.
                 Es ist zwingend erforderlich, dass du die Inhalte umgehend überprüfst und eine aktualisierte Version erstellst.
                 Die Aktualität deines One Pagers liegt in deiner Verantwortung.
         default
