repair cleanUp, add WRONG_FILE_NAME, remove MISSING_FILE_INDICATOR, use esnext instead of es6

--- a/azure-functions/resources/mail_templates/template_DE.pug
+++ b/azure-functions/resources/mail_templates/template_DE.pug
@@ -24,7 +24,7 @@ mixin errors(error)
                 Falls in deiner PPTX-Datei Folien von alten und neuen Templates kombiniert wurden,
                 erstelle bitte einen neuen One Pager auf Basis des aktuellen Templates und übertrage die Inhalte, ohne alte Folien direkt zu kopieren.
                 Die entsprechenden Vorlagen findest du <a href="#{faqURL}">hier</a>.
-        when "MISSING_LANGUAGE_INDICATOR_IN_NAME"
+        when "WRONG_FILE_NAME"
             li(style="margin-top: 5px;").
                 Fehlerhafter Dateiname: Der Dateiname deines One Pagers entspricht nicht dem vorgesehenen Format.
                 Ein Dateiname eines jeden One Pagers muss auf folgende Art und Weise beginnen:
