--- a/azure-functions/resources/mail_templates/template_EN.pug
+++ b/azure-functions/resources/mail_templates/template_EN.pug
@@ -26,7 +26,7 @@ mixin errors(error)
                 erstelle bitte einen neuen One Pager auf Basis des aktuellen Templates und übertrage die Inhalte,
                 ohne alte Folien direkt zu kopieren.
                 Die entsprechenden Vorlagen findest du <a href="#{faqURL}">hier</a>.
-        when "MISSING_LANGUAGE_INDICATOR_IN_NAME"
+        when "WRONG_FILE_NAME"
             li(style="margin-top: 5px;").
                 "Fehlender Sprachindikator im Dateinamen": Dein One Pager enthält keinen Sprachindikator im Dateinamen.
                 Bitte füge den Sprachindikator (z.B. _EN_ oder _DE_) hinzu, um die Sprache des One Pagers zu kennzeichnen.
